[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "markdownexporter"
version = "0.1.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Framework :: MkDocs",]
dependencies = [ "mkdocs>=1.4.1", "toml>=0.10.2",]

[project.license]
text = "MIT"

[project.entry-points."mkdocs.plugins"]
markdownexporter = "markdownexporter.plugin:MarkdownExporter"
